--- a/DummyEOS/DummyEOS/Storyboards/Base.lproj/Main.storyboard
+++ b/DummyEOS/DummyEOS/Storyboards/Base.lproj/Main.storyboard
@@ -129,6 +129,10 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="353"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <sections/>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="a2f-Eo-Ccz"/>
+                                                            <outlet property="delegate" destination="BYZ-38-t0r" id="jqP-p0-syn"/>
+                                                        </connections>
                                                     </tableView>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
