added image for launch screen

--- a/DummyEOS/DummyEOS/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/DummyEOS/DummyEOS/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eoslogo" translatesAutoresizingMaskIntoConstraints="NO" id="K2w-Wm-YcX">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eosMain" translatesAutoresizingMaskIntoConstraints="NO" id="K2w-Wm-YcX">
                                 <rect key="frame" x="157" y="403" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="K2w-Wm-YcX" secondAttribute="height" multiplier="1:1" id="5Hk-fG-R3S"/>
@@ -50,6 +50,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="eoslogo" width="20" height="20"/>
+        <image name="eosMain" width="128" height="128"/>
     </resources>
 </document>
